feat: add confirmPassword field
